# vscode_cpp_docker

./: .gitignore  docker-compose.yaml  dockerfile  usage.txt
package/: install.sh
workdir/cmake_template/: .gitignore  CMakeLists.txt  main.cpp
workdir/cmake_template/include/: inc.h
workdir/cmake_template/src/: inc.cpp
workdir/makefile_template/: Makefile  main.cpp
workdir/makefile_template/include/: inc.h
workdir/makefile_template/src/: inc.cpp
